fixed body spacing of divs -- still need to add colors

--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,24 @@
 
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 html {
   display: flex;
   margin: 0;
   padding: 0;
+  
 }
 nav {
-    display: flex;
+    display: flex; 
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
     background-color: lightgrey;
+
 }
 
 .logo {
@@ -34,9 +37,10 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    width: 100%;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
+
 }
 
 .navlinks li {
@@ -108,12 +112,12 @@ nav {
 .blue-block1 {
   background-color: #181998;
   height: 1650px;
-  width: 55%;
+  width: 100%;
   position: relative;
   display: flex;
   margin: 0;
   padding: 0;
-  /* justify-content: right; */
+  justify-content: center;
 }
 .grid1 {
   display: grid;
@@ -122,8 +126,8 @@ nav {
   grid-gap: 12px;
   position: relative;
   justify-content: center;
-  top: 30%;
-  left: 35%;
+  /* top: 30%; */
+  /* left: 35%; */
  
 }
 
@@ -171,22 +175,23 @@ nav {
 .yellow-block3 {
   background-color:#ffce3e;
   height: 300px;
-  width: 40%;
+  width: 50%;
   position: relative;
-  justify-content: start;
+  justify-content: center;
   display: flex;
-  top: -70px;
 }
 
 .grid2 {
   display: grid;
-  grid-template-columns: 50px 800px ;
-  grid-template-rows: 80px 80px;
+  grid-template-columns: 100px 600px ;
+  grid-template-rows: 100px 100px;
   align-items: center;
   position: relative;
-  justify-content: center;
-  left: 30%;
-  top: 20%;
+  justify-content: left;
+  /* left: 30%; */
+  /* top: 20%; */
+  /* width: 100%; */
+  
 }
 .dot {
   height: 35px;
@@ -200,6 +205,11 @@ nav {
   font-size: x-large;
 } 
 
+.dot-article {
+  display: flex;
+  position:relative;
+  justify-content: center;
+}
 /* 
 .yellow-block4 {
   background-color:#ffce3e;
@@ -225,23 +235,23 @@ nav {
 .yellow-block5 {
   background-color:#ffce3e;
   height: 1700px;
-  position: absolute;
+  position: relative;
   justify-content: right;
   display: flex;
-  top: 100%;
-  width: 100%;
+  /* top: 100%; */
+  width: 50%;
+  margin: 5px;
 }
 
 .grid3 {
   display: grid;
-  grid-template-columns: 200px 200px 200px;
+  grid-template-columns: 300px 300px 300px;
   grid-gap: 150px;
-  grid-template-rows: 80px;
+  grid-template-rows: 800px;
   align-items: center;
   position: relative;
   justify-content: center;
-  top: 500%;
-  left: -90%;
+  /* top: 500%; */
   width: 100%;
 
 }
@@ -270,35 +280,34 @@ margin-top: 200px;
 
 .yellow-block6 {
   background-color:#ffce3e;
-  height: 450px;
-  position: absolute;
-  justify-content: right;
+  height: 1850px;
+  position: relative;
+  justify-content: center;
   display: flex;
-  top: 665%;
-  width: 100%;
+  /* top: 665%; */
+  width: 50%;
 }
 
 .grid4 {
   display: grid;
-  grid-template-columns: 500px 500px;
-  grid-template-rows: 80px;
-  grid-gap: 5px;
-  margin-left: 160px;
+  grid-template-columns: 400px 500px;
+  grid-template-rows: 900px;
+  grid-gap: 15px;
   position: relative;
-  top: 5%;
-  left: 40%;
-  justify-content: center;
+  justify-content: right;
 }
 .ysweater-img {
-  height: 400px;
-  width: 300px;
-  box-shadow: -70px -40px #181998;
+  height: 500px;
+  width: 400px;
+  box-shadow: -70px -50px #181998;
+  margin: 55px;
 }
 
 .article-3 {
-  align-items:flex-end;
+  align-items:center;
   text-align:left;
-  margin-top: 100px;
+  margin-top: 300px;
+  margin-left: 75px;
 }
 
 /* .blue-block3 {
@@ -315,15 +324,15 @@ margin-top: 200px;
 .single-article {
   display: flex;
   justify-content: center;
-  position:absolute;
+  position:relative;
+  height: 500px;
 }
 .grid5 {
   display: grid;
   grid-template-columns: 150px 700px;
-  grid-template-rows: 400px;
+  grid-template-rows: 300px;
   grid-gap: 35px;
   position: relative;
-  top: 680%;
 }
 
 .yellow-rec {
@@ -333,25 +342,24 @@ margin-top: 200px;
 
 .article-4 {
   align-items: center;
-  margin-top: 60px;
   text-align: left;
 }
 
 .milan-week {
   display: flex;
   justify-content: center;
-  position:absolute;
-  left: 10%;
+  position:relative;
+  /* left: 10%; */
 
 }
 
 .grid6 {
   display: grid;
   grid-template-columns: 300px 400px;
-  grid-template-rows: 400px;
+  grid-template-rows: 700px;
   grid-gap: 5px;
   position: relative;
-  top: 780%;
+  /* top: 780%; */
 
   justify-content: center;
 }
@@ -364,8 +372,8 @@ margin-top: 200px;
   background-color: white;
   position: absolute;
   width: 400px;
-  height: 200px;
-  top: 840%;
+  height: 150px;
+  top: 40%;
   display: flex;
 }
 
@@ -386,18 +394,19 @@ margin-top: 200px;
 .yellow-red-duo {
   display: flex;
   justify-content: center;
-  position:absolute;
+  position:relative;
+  height: 800px;
 }
 .grid7 {
   display: grid;
   grid-template-columns: 300px 300px;
-  grid-template-rows: 500px;
+  grid-template-rows: 700px;
   grid-gap: 150px;
   position: relative;
   align-items: center;
   justify-content: center;
-  top: 700%;
-  left: 10%;
+  /* top: 700%; */
+  /* left: 10%; */
 }
 
 .yellow-dress {
@@ -415,7 +424,7 @@ margin-top: 200px;
 .blue-bottom-block {
   display: flex;
   justify-content: center;
-  position:absolute;
+  position:relative;
 }
 
 .grid8 {
@@ -427,16 +436,11 @@ margin-top: 200px;
   width: 100%;
   background-color: #181998;
   background-size: cover;
-  top: 840%;
+  /* top: 840%; */
 }
 
 iframe {
     margin-left: 65px;
-}
-
-
-* {
-  box-sizing: border-box;
 }
 
 
@@ -498,7 +502,7 @@ input[type=submit]:hover {
       }
     }
 .footer {
-    position:absolute;
+    position:relative;
     left: 0;
     bottom: 0;
     width: 100%;
